# Semi-ATE-Installer

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: CD.yml  CI.yml  python-publish.yml  release.yml
requirements/: run.txt
semi_ate_installer/: cli.py
semi_ate_installer/channel/: repository.py
semi_ate_installer/environment/: handler.py
semi_ate_installer/state/: base.py  state_machine.py
semi_ate_installer/utils/: __init__.py  commands.py  packages.py  profiles.py
src/semi_ate_installer/: cli.py
src/semi_ate_installer/channel/: repository.py
src/semi_ate_installer/environment/: handler.py
src/semi_ate_installer/state/: base.py  state_machine.py
src/semi_ate_installer/utils/: __init__.py  commands.py  packages.py  profiles.py
