[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semi-ate-installer"
dynamic = ["version"]
description = "Semi ATE Installer package for ATE Projects"
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "The Semi-ATE Project Contributors", email = "ate.organization@gmail.com" },
]
keywords = [
    "ATE",
    "Automatic",
    "Equipment",
    "Plugin",
    "Semiconductor",
    "Spyder",
    "Test",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dependencies = [
    "packaging",
    "pyfiglet>=0.8",
    "questionary==1.10.0",
]

[project.scripts]
ate-installer = "semi_ate_installer.cli:main"

[tool.hatch.version]
path = "semi_ate_installer/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/semi_ate_installer",
]
