[metadata]
name = semi-ate-installer
version = 0.0.1
description = "Semi ATE Installer package for ATE Projects"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = "The Semi-ATE Project Contributors"
author_email = "ate.organization@gmail.com"
url =
license =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    questionary==1.10.0
    pyfiglet>=0.8
    packaging

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort>=5.0
    flake8
    mypy
    types-setuptools
    pytest
    pre-commit

[options.entry_points]
console_scripts =
    semi-ate-installer = semi_ate_installer.cli:main

# flake8: https://flake8.pycqa.org/en/2.5.5/config.html
[flake8]
max-line-length = 88
extend-ignore = E203